feat: add variant API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,4 @@ spring:
     show-sql: true
 
   jackson:
-    property-naming-strategy: SNAKE_CASE
+    property-naming-strategy: LOWER_CAMEL_CASE
